--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -38,46 +38,40 @@
     <h3>Our Instructors</h2>
 
     <div class="executive"> 
-        <div class="profile-card">
-          <img src="assets/webstuff/pplimg/davidzhou.png" alt="David Zhou"/>
+        <div class="profile-card" style="height: 485px">
+          <img src="assets/webstuff/pplimg/phoenix wu.png" alt="David Zhou"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">David Zhou</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Phoenix Wu</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
-              <li>National Science Bowl Champion</li>
+              <li>MIT '27</li>
+              <li>2x IChO medalist</li>
+              <li>2x USNCO national finalist</li>
             </ul>
           </div>
         </div>
 
-        <div class="profile-card">
-          <img src="assets/webstuff/pplimg/leo li.png"/>
+        <div class="profile-card" style="height: 485px">
+          <img src="assets/webstuff/pplimg/anant asthana.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Leo Li</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Anant Asthana</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
+              <li>2x USNCO national finalist</li>
+              <li>National Scibowl top 5</li>
+              <li>AIME qualifier</li>
             </ul>
           </div>
         </div>
 
         <div class="break"></div>
 
-        <div class="profile-card">
-          <img src="assets/webstuff/pplimg/Aashraychegu.jpg"/>
+        <div class="profile-card" style="height: 485px">
+          <img src="assets/webstuff/pplimg/yufei chen.png"/>
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Aashray Chegu</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="profile-card">
-          <img src="assets/webstuff/pplimg/logan reich.png"/>
-          <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Logan Reich</h2>
-            <ul>
-              <li>IESO Alternate</li>
-              <li>USAAAO Gold Medalist</li>
+              <li>IChO alternate</li>
+              <li>IBO top gold (ranked #1)</li>
+              <li>IESO gold medalist (ranked #5)</li>
             </ul>
           </div>
         </div>
