added usnco ppl

--- a/team.html
+++ b/team.html
@@ -643,6 +643,47 @@
         </ul>
       </div>
     </div>
+
+    <div class="bottomprof">
+      <img src="assets/webstuff/pplimg/phoenix wu.png" />
+      <div class = "writerdetails">
+        <h4>Phoenix Wu</h4>
+        <p style="margin-bottom: 10px; color: #11bf40;">USNCO Bootcamp</p>
+        <ul style="font-size: 90%;">
+          <li>MIT '27</li>
+          <li>2x IChO medalist</li>
+          <li>2x USNCO national finalist</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="bottomprof">
+      <img src="assets/webstuff/pplimg/anant asthana.png" />
+      <div class = "writerdetails">
+        <h4>Anant Asthana</h4>
+        <p style="margin-bottom: 10px; color: #11bf40;">USNCO Bootcamp</p>
+        <ul style="font-size: 90%;">
+          <li>2x USNCO national finalist</li>
+          <li>National Scibowl top 5</li>
+          <li>AIME qualifier</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="bottomprof">
+      <img src="assets/webstuff/pplimg/yufei chen.png" />
+      <div class = "writerdetails">
+        <h4>Aashray Chegu</h4>
+        <p style="margin-bottom: 10px; color: #11bf40;">USNCO Bootcamp</p>
+        <ul style="font-size: 90%;">
+          <li>IChO alternate</li>
+          <li>IBO top gold (ranked #1)</li>
+          <li>IESO gold medalist (ranked #5)</li>
+        </ul>
+      </div>
+    </div>
+
+
     <div class="bottomprof">
       <img src="assets/webstuff/pplimg/fu xin chen.png" />
       <div class = "writerdetails">
