--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -67,7 +67,7 @@
         <div class="profile-card" style="height: 485px">
           <img src="assets/webstuff/pplimg/yufei chen.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Aashray Chegu</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Yufei Chen</h2>
             <ul>
               <li>IChO alternate</li>
               <li>IBO top gold (ranked #1)</li>
