temperamental boss + typo

--- a/team.html
+++ b/team.html
@@ -645,6 +645,19 @@
     </div>
 
     <div class="bottomprof">
+      <img src="assets/webstuff/pplimg/yufei chen.png" />
+      <div class = "writerdetails">
+        <h4>Yufei Chen</h4>
+        <p style="margin-bottom: 10px; color: #11bf40;">USNCO Bootcamp</p>
+        <ul style="font-size: 90%;">
+          <li>IBO top gold (ranked #1)</li>
+          <li>IChO alternate</li>
+          <li>IESO gold medalist (ranked #5)</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="bottomprof">
       <img src="assets/webstuff/pplimg/phoenix wu.png" />
       <div class = "writerdetails">
         <h4>Phoenix Wu</h4>
@@ -670,18 +683,6 @@
       </div>
     </div>
 
-    <div class="bottomprof">
-      <img src="assets/webstuff/pplimg/yufei chen.png" />
-      <div class = "writerdetails">
-        <h4>Aashray Chegu</h4>
-        <p style="margin-bottom: 10px; color: #11bf40;">USNCO Bootcamp</p>
-        <ul style="font-size: 90%;">
-          <li>IChO alternate</li>
-          <li>IBO top gold (ranked #1)</li>
-          <li>IESO gold medalist (ranked #5)</li>
-        </ul>
-      </div>
-    </div>
 
 
     <div class="bottomprof">
