--- a/programs.html
+++ b/programs.html
@@ -14,10 +14,10 @@
 <body>
     <header >
         <div class="crazy">
-            <a href="index.html"><img id="logo" src="assets/webstuff/ptitle.png" /></a>
+            <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a>
         </div>
         <div class="head">
-            <a href="products.html"><button id="prod">Products</button></a>
+            <a href="projects.html"><button id="prod">Projects</button></a>
             <a href="programs.html"><button id="prog">Programs</button></a>
             <a href="team.html"><button id="te">Our Team</button></a>
             <a href="contact.html"><button id="cont">Contact</button></a>
@@ -25,7 +25,7 @@
     </header>
     
   <section class="programstop">
-    <p>Our products are great for self-learners. But for those who are curious enough to dive even deeper and attend live lectures by some of the most achieved high school/college students in the world, we proudly offer our <span style="font-weight: 600">bootcamps.</span> </p>
+    <p>For those who are curious enough to dive even deeper and attend live lectures by some of the most accomplished young scientists in the world, we proudly offer our <span style="font-weight: 600">bootcamps.</span> </p>
   </section>
     
   <section class="cool">
@@ -45,7 +45,7 @@
   <div class="info">
     <section class="useso" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h1 style="font-size: 500%; font-weight: 600">USESO Bootcamp</h1>
-      <p style="font-size: 140%;">Taught by top US Earth Science Team members and USESO campers, this intensive bootcamp is beginner-friendly and will teach the fundamental concepts you need to excel in the Earth Science Olympiad.</p>
+      <p style="font-size: 140%;">Taught by International Earth Science Olympiad medalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USESO national training camp.</p>
       <a style=" font-size: 140%; color: #18ecf0" href="usesobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
