--- a/projects.html
+++ b/projects.html
@@ -14,10 +14,10 @@
 <body>
     <header >
         <div class="crazy">
-            <a href="index.html"><img id="logo" src="assets/webstuff/ptitle.png" /></a>
+            <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a>
         </div>
         <div class="head" style="padding-bottom: 2vh">
-            <a href="products.html"><button id="prod">Products</button></a>
+            <a href="projects.html"><button id="prod">Projects</button></a>
             <a href="programs.html"><button id="prog">Programs</button></a>
             <a href="team.html"><button id="te">Our Team</button></a>
             <a href="contact.html"><button id="cont">Contact</button></a>
@@ -90,7 +90,7 @@
 
   // Function to check if the current page is "products.html"
   function isOnProductsPage() {
-    return window.location.pathname.endsWith('products.html');
+    return window.location.pathname.endsWith('projects.html');
   }
 
   // Apply the style on initial page load
