--- a/team.html
+++ b/team.html
@@ -15,10 +15,10 @@
 <body>
   <header >
       <div class="crazy">
-          <a href="index.html"><img id="logo" src="assets/webstuff/ptitle.png" /></a>
+          <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a>
       </div>
       <div class="head" style="padding-bottom: 2vh">
-          <a href="products.html"><button id="prod">Products</button></a>
+          <a href="projects.html"><button id="prod">Projects</button></a>
           <a href="programs.html"><button id="prog">Programs</button></a>
           <a href="team.html"><button id="te">Our Team</button></a>
           <a href="contact.html"><button id="cont">Contact</button></a>
