projects.html on landing page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <p id="bsm" data-aos="fade-up"  data-aos-once="true">We will guide you, step by step, from a dreamer to a doer.</p>
     <h5 id="bsbg" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50">Open the pandora box now.</h3>
     <div id="container">
-      <a href="products.html">
+      <a href="projects.html">
         <button class="btn" >Get Started</button>
       </a>
     </div>
