--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
   <section id="about" style="margin-top: 40vh; position:relative; display: flex; flex-direction: column; align-items: center;">
     <div style=" z-index:999; display: flex; flex-direction: column; align-items: center;">
-      <h2 id="dreambig" data-aos="fade-up" data-aos-once="true">Dream Big.</h2>
-      <p  id="dbt" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
+      <h2 id="dreambig" data-aos="fade-up" data-aos-once="true" data-aos-delay="50">Dream Big.</h2>
+      <p  id="dbt" data-aos="fade-up" data-aos-once="true" data-aos-delay="100"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
     </div>
-    <div id="dbi" data-aos="fade-up" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
-      <img id="dreambigimg3" src="assets/webstuff/indbg3.png" style="height: 600px; width: 600px; transform: translate(0vw, -2vw)">
+    <div id="dbi" data-aos="fade-up" data-aos-once="true" data-aos-delay="150"  style="position:absolute; z-index:-1; display: flex;">
+      <img id="dreambigimg3" src="assets/webstuff/indbg5.png" style="height: 600px; width: 600px; transform: translate(0vw, -2vw)">
       <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 442px; width: 442px; transform: translate(6vw, -24vh)">
-      <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 550px; width: 550px; transform: translate(8vw, 30vh)">
-      <img id="dreambigimg5" src="assets/webstuff/indbg5.png" style="height: 500px; width: 500px; transform: translate(2vw, -22vh)">
+      <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 550px; width: 550px; transform: translate(-1vw, 30vh)">
+      <img id="dreambigimg5" src="assets/webstuff/indbg3.png" style="height: 500px; width: 500px; transform: translate(-10vw, -22vh)">
     </div>
   </section>
 
@@ -62,7 +62,7 @@
   <section id="contact" style="display: flex; flex-direction: column; align-items: center;">
     <h4 data-aos="fade-up"  data-aos-once="true" id="fif">Prepared and taught by 50+ high-performing high school/college students <span style="color:#00FF82">worldwide.</h2>
     <p id="ptext" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50" id="fift">Our original guides are written and taught by <span style="color:#fff">an international team of 50+ quality instructors</span> from <span style="color:#fff">top high schools and universities</span>, having received national or international recognition in prestigious <span style="color:#fff">Olympiad competitions</span>. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs <span style="color:#fff">— for free</span>. </p>
-    <div id="ppl" data-aos="fade-in" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
+    <div id="ppl" data-aos="zoom-in" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
       <img id="pplimg" src="assets/webstuff/ppl.png" style="transform: translateY(-45vh);">
     </div>
   </section>
