initial phone formatting

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
   <div class="stuff">
     <section class="oly" style="display: flex; flex-direction: column; align-items: center;">
-    <p data-aos="fade-up"  data-aos-once="true" ><span style=" color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
+    <p id="wowza" data-aos="fade-up"  data-aos-once="true" ><span style=" color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
     </section>
   </div>
 
-  <div style="display: flex; flex-direction: row; justify-content: center; margin-bottom: 40vh">
+  <div class = "woweza" style="display: flex; flex-direction: row; justify-content: center; margin-bottom: 40vh">
     <img id="aa" data-aos="fade-up"  data-aos-once="true" src="assets/webstuff/usaaao_guide.png" />
     <img id="es" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"  src="assets/webstuff/useso_guide.png" />
     <img id="b" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100" src="assets/webstuff/usabo_guide.png" />
