--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
   <section id="about" style="margin-top: 40vh; position:relative; display: flex; flex-direction: column; align-items: center;">
     <div style=" z-index:999; display: flex; flex-direction: column; align-items: center;">
-      <h2 id="dreambig" data-aos="fade-up" data-aos-once="true" data-aos-delay="50">Dream Big.</h2>
-      <p  id="dbt" data-aos="fade-up" data-aos-once="true" data-aos-delay="100"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
+      <h2 id="dreambig" data-aos="fade-up" data-aos-duration="600" data-aos="ease-in" data-aos-once="true" data-aos-delay="100">Dream Big.</h2>
+      <p  id="dbt" data-aos-duration="600" data-aos="fade-up" data-aos-once="true" data-aos="ease-in" data-aos-delay="150"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
     </div>
-    <div id="dbi" data-aos="fade-up" data-aos-once="true" data-aos-delay="150"  style="position:absolute; z-index:-1; display: flex;">
+    <div id="dbi" data-aos-duration="600" data-aos="fade-up" data-aos="ease-in" data-aos-once="true" data-aos-delay="200"  style="position:absolute; z-index:-1; display: flex;">
       <img id="dreambigimg3" src="assets/webstuff/indbg5.png" style="height: 600px; width: 600px; transform: translate(0vw, -2vw)">
       <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 442px; width: 442px; transform: translate(6vw, -24vh)">
       <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 550px; width: 550px; transform: translate(-1vw, 30vh)">
