changed text and color

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section id="about" style="margin-top: 40vh; position:relative; display: flex; flex-direction: column; align-items: center;">
     <div style=" z-index:999; display: flex; flex-direction: column; align-items: center;">
       <h2 id="dreambig" data-aos="fade-up" data-aos-duration="600" data-aos="ease-in" data-aos-once="true" data-aos-delay="100">Dream Big.</h2>
-      <p  id="dbt" data-aos-duration="600" data-aos="fade-up" data-aos-once="true" data-aos="ease-in" data-aos-delay="150"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
+      <p  id="dbt" data-aos-duration="600" data-aos="fade-up" data-aos-once="true" data-aos="ease-in" data-aos-delay="150">Ever wanted to qualify to compete in the International Biology Olympiad, which sets you up for a path of success as a future doctor? Or to win at the International Science and Engineering Fair which brings you one step closer to becoming a future scientist or innovator? You need resources and mentorship to help you reach your dreams. Regardless, cast your wide net far beyond the horizon — because we got you covered. </p>
     </div>
     <div id="dbi" data-aos-duration="600" data-aos="fade-up" data-aos="ease-in" data-aos-once="true" data-aos-delay="200"  style="position:absolute; z-index:-1; display: flex;">
       <img id="dreambigimg3" src="assets/webstuff/indbg5.png" style="height: 600px; width: 600px; transform: translate(0vw, -2vw)">
@@ -47,7 +47,7 @@
 
   <div class="stuff">
     <section class="oly" style="display: flex; flex-direction: column; align-items: center;">
-    <p id="wowza" data-aos="fade-up"  data-aos-once="true" ><span style=" color:#fff">At Pandorax</span>, our team of experts spent countless hours producing the ultimate learning products. The highlight is our four original products, <span style="color:#fff">the Olympiad Guides</span>, which instill interests and knowledge of the advanced sciences by guiding any curious student in the intricate realms of science, and to their success in international science olympiad competitions. Say goodbye to quitting your dreams. <span style="color:#fff">We are here to nurture them.</span> </p>
+    <p id="wowza" data-aos="fade-up"  data-aos-once="true" >With nearly one thousand pages of content, our team of experts have spent countless hours producing the internet's largest resource for Olympiad preparation: the Olympiad Guides, which offers a carefully-planned pathway to guide you to your success at the International Science Olympiads, for free. Additionally, we offer our mentorship programs for scientific research, as well as five Olympiad bootcamps. In the end, our resources exist — so that your dream can be actually turned to reality.</p>
     </section>
   </div>
 
@@ -61,7 +61,7 @@
 
   <section id="contact" style="display: flex; flex-direction: column; align-items: center;">
     <h4 data-aos="fade-up"  data-aos-once="true" id="fif">Prepared and taught by 50+ high-performing high school/college students <span style="color:#00FF82">worldwide.</h2>
-    <p id="ptext" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50" id="fift">Our original guides are written and taught by <span style="color:#fff">an international team of 50+ quality instructors</span> from <span style="color:#fff">top high schools and universities</span>, having received national or international recognition in prestigious <span style="color:#fff">Olympiad competitions</span>. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs <span style="color:#fff">— for free</span>. </p>
+    <p id="ptext" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50" id="fift">Our projects and programs are prepared and taught by an international team of 50+ quality instructors from top high schools and universities, including MIT, Stanford, and Caltech, having all received national or international recognition in prestigious STEM competitions. With our large, highly experienced staff team, Pandorax is dedicated to promoting the next generation of scientists and innovators. And it starts with you.</p>
     <div id="ppl" data-aos="zoom-in" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
       <img id="pplimg" src="assets/webstuff/ppl.png" style="transform: translateY(-45vh);">
     </div>
