landing page phone
still have to do pplimg

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <p  id="dbt" data-aos-duration="600" data-aos="fade-up" data-aos-once="true" data-aos="ease-in" data-aos-delay="150">Ever wanted to qualify to compete in the International Biology Olympiad, which sets you up for a path of success as a future doctor? Or to win at the International Science and Engineering Fair which brings you one step closer to becoming a future scientist or innovator? You need resources and mentorship to help you reach your dreams. Regardless, cast your wide net far beyond the horizon — because we got you covered. </p>
     </div>
     <div id="dbi" data-aos-duration="600" data-aos="fade-up" data-aos="ease-in" data-aos-once="true" data-aos-delay="200"  style="position:absolute; z-index:-1; display: flex;">
-      <img id="dreambigimg3" src="assets/webstuff/indbg5.png" style="height: 600px; width: 600px; transform: translate(0vw, -2vw)">
-      <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 442px; width: 442px; transform: translate(6vw, -24vh)">
-      <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 550px; width: 550px; transform: translate(-1vw, 30vh)">
-      <img id="dreambigimg5" src="assets/webstuff/indbg3.png" style="height: 500px; width: 500px; transform: translate(-10vw, -22vh)">
+      <img id="dreambigimg3" src="assets/webstuff/indbg5.png">
+      <img id="dreambigimg4" src="assets/webstuff/indbg4.png">
+      <img id="dreambigimg2" src="assets/webstuff/indbg2.png" >
+      <img id="dreambigimg5" src="assets/webstuff/indbg3.png" >
     </div>
   </section>
 
@@ -51,7 +51,7 @@
     </section>
   </div>
 
-  <div class = "woweza" style="display: flex; flex-direction: row; justify-content: center; margin-bottom: 5vh">
+  <div class = "woweza card-container" >
     <img id="aa" data-aos="fade-up"  data-aos-once="true" src="assets/webstuff/usaaao_guide.png" />
     <img id="es" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"  src="assets/webstuff/useso_guide.png" />
     <img id="b" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100" src="assets/webstuff/usabo_guide.png" />
@@ -63,7 +63,7 @@
     <h4 data-aos="fade-up"  data-aos-once="true" id="fif">Prepared and taught by 50+ high-performing high school/college students <span style="color:#00FF82">worldwide.</h2>
     <p id="ptext" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50" id="fift">Our projects and programs are prepared and taught by an international team of 50+ quality instructors from top high schools and universities, including MIT, Stanford, and Caltech, having all received national or international recognition in prestigious STEM competitions. With our large, highly experienced staff team, Pandorax is dedicated to promoting the next generation of scientists and innovators. And it starts with you.</p>
     <div id="ppl" data-aos="zoom-in" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
-      <img id="pplimg" src="assets/webstuff/ppl.png" style="transform: translateY(-45vh);">
+      <img id="pplimg" src="assets/webstuff/ppl.png" >
     </div>
   </section>
 
@@ -91,7 +91,7 @@
     function handleScroll() {
       const scrollPercent = (window.scrollY / window.innerHeight) * 1.5;
       const opacity = 0.6 - scrollPercent; // Adjust this factor to control the fading speed
-  
+
       homeBackground.style.opacity = opacity;
     }
   
