--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -44,8 +44,8 @@
             <h2 style="font-size: 130%; font-weight: 600">Phoenix Wu</h2>
             <ul>
               <li>MIT '27</li>
-              <li>2x IChO medalist</li>
-              <li>2x USNCO national finalist</li>
+              <li>2x IChO medalist, 1x gold</li>
+              <li>4x USNCO national finalist</li>
             </ul>
           </div>
         </div>
