changed bottom text

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <section id="thingy" style="display: flex; flex-direction: column; align-items: center;">
     <p id="bsm" data-aos="fade-up"  data-aos-once="true">We will guide you, step by step, from a dreamer to a doer.</p>
-    <h5 id="bsbg" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50">Open the pandora box now.</h3>
+    <h5 id="bsbg" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50">Open Pandora's box now.</h3>
     <div id="container">
       <a href="projects.html">
         <button class="btn" >Get Started</button>
