--- a/usabobootpage.html
+++ b/usabobootpage.html
@@ -88,7 +88,7 @@
     </div>
 
     <section class="container">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBEyXHo54COpaFtikfbli59HGILDYgtBKqokx_qDvoMw-vWg/closedform"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
     </section>
 
 <script src="assets/script.js"></script>
