--- a/usesobootpage.html
+++ b/usesobootpage.html
@@ -26,7 +26,7 @@
     <h1>USESO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 9 classes from 8/1 - 8/9 every day 7-8:30 PM EST</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 9/16 - 12/9 every Sunday 6:30-7:30 PM EST (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This bootcamp prepares students for the first round of the US Earth Science Olympiad, assuming no prior experience with Earth science. This bootcamp covers all four spheres of Earth: geosphere, hydrosphere, atmosphere, and astronomy. By the end of the bootcamp, students should have enough knowledge to reach the national training camp of the USESO.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: None, but a basic understanding of high school algebra is recommended.</p>
     </section>
@@ -85,7 +85,7 @@
     </div>
 
     <section class="container">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBEyXHo54COpaFtikfbli59HGILDYgtBKqokx_qDvoMw-vWg/closedform"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
     </section>
 
 <script src="assets/script.js"></script>
