--- a/mlbootpage.html
+++ b/mlbootpage.html
@@ -88,7 +88,7 @@
     </div>
 
     <section class="container">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaOqzPS-UR3jU3K4WkT5a7XC8H9vVL6GhpOB17ZWevy-CK3Q/viewform"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
     </section>
 
 <script src="assets/script.js"></script>
