--- a/programs.html
+++ b/programs.html
@@ -44,33 +44,33 @@
 
   <div class="info">
     <section class="useso" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
-      <h1 style="font-size: 500%; font-weight: 600">USESO Bootcamp</h1>
-      <p style="font-size: 140%;">Taught by International Earth Science Olympiad medalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USESO national training camp.</p>
-      <a style=" font-size: 140%; color: #18ecf0" href="usesobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+      <h2 >USESO Bootcamp</h1>
+      <p id="idk">Taught by International Earth Science Olympiad medalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USESO national training camp.</p>
+      <a id="idek" style="  color: #18ecf0" href="usesobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usabo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
-      <h2 style="font-size: 500%; font-weight: 600">USABO Bootcamp</h2>
-      <p style="font-size: 140%;">Taught by top USA Biolympiad winners and finalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USABO semifinals and win honorable mention.</p>
-      <a style=" font-size: 140%; color:  #ff7ee3" href="usabobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+      <h2 >USABO Bootcamp</h2>
+      <p id="idk">Taught by top USA Biolympiad winners and finalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USABO semifinals and win honorable mention.</p>
+      <a id="idek" style=" color:  #ff7ee3" href="usabobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usapho" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
-      <h2 style="font-size: 500%; font-weight: 600">USAPhO Bootcamp</h2>
-      <p style="font-size: 140%;">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO.</p>
-      <a style=" font-size: 140%; color: #dfb26b " href="usaphobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+      <h2 >USAPhO Bootcamp</h2>
+      <p id="idk">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO.</p>
+      <a id="idek" style="  color: #dfb26b " href="usaphobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usnco" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
-      <h2 style="font-size: 500%; font-weight: 600">USNCO Bootcamp</h2>
-      <p style="font-size: 140%;">Taught by International Chemistry Olympiad medalists & USNCO campers, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USNCO nationals round and win USNCO honors.</p>
-      <a style=" font-size: 140%; color:  #bada55" href="usncobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+      <h2 >USNCO Bootcamp</h2>
+      <p id="idk">Taught by International Chemistry Olympiad medalists & USNCO campers, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USNCO nationals round and win USNCO honors.</p>
+      <a id="idek" style="  color:  #bada55" href="usncobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
     
     <section class="ml" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
-      <h3 style="font-size: 500%; font-weight: 600">Machine Learning Research Bootcamp</h3>
-      <p style="font-size: 140%;">Taught by young scientists whose groundbreaking research in AI and machine learning won Grand Awards at the prestigious Regeneron International Science and Engineering Fair (ISEF), this bootcamp is a valuable opportunity to learn advanced ML that can be applied to produce cutting-edge research innovations.</p>
-      <a style=" font-size: 140%; color: #70f9f4" href="mlbootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+      <h2 >Machine Learning Research Bootcamp</h3>
+      <p id="idk">Taught by young scientists whose groundbreaking research in AI and machine learning won Grand Awards at the prestigious Regeneron International Science and Engineering Fair (ISEF), this bootcamp is a valuable opportunity to learn advanced ML that can be applied to produce cutting-edge research innovations.</p>
+      <a id="idek" style="  color: #70f9f4" href="mlbootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
   </div>
 
