--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
     </div>
   </section>
 
+  <section class="copyright">
+    <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+  </section>
+
 
   <script src="assets/script.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
