--- a/mlbootpage.html
+++ b/mlbootpage.html
@@ -91,6 +91,10 @@
       <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
     </section>
 
+    <section class="copyright">
+      <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+    </section>
+
 <script src="assets/script.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
