--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,10 @@
         <a href="https://seekso.org"><button id="seeksop">Learn More</button></a>
       </section>
     </div>
+
+    <section class="copyright">
+      <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+    </section>
       
 
 <script>
