--- a/team.html
+++ b/team.html
@@ -904,7 +904,10 @@
     </div>
   </div> 
   
-  <div class="temporary margin" style="margin-bottom: 40vh;"></div>
+  <section class="copyright">
+    <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+  </section>
+
     
     
 
