--- a/programs.html
+++ b/programs.html
@@ -74,6 +74,9 @@
     </section>
   </div>
 
+  <section class="copyright">
+    <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+  </section>
 
 
 <script>
