--- a/projects.html
+++ b/projects.html
@@ -175,6 +175,13 @@ document.addEventListener('DOMContentLoaded', function () {
     });
 });
 
+// New event listener:
+window.addEventListener("load",function() {
+    setTimeout(function(){
+        // Hide the address bar:
+        window.scrollTo(0, 1);
+    }, 0);
+});
 
 </script>
 <script src="assets/script.js"></script>
